Debugged footer alignment issue

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -95,7 +95,7 @@
 @media screen and (min-width:770px){
 .flight-link {
   font-size: 2vw;
-  margin-top: -250px;
+  margin-top: -280px;
   position: fixed;
 }
 .small {
